--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
+    "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.39.1",
     "@types/heatmap.js": "^2.0.41",
     "@types/node": "^24.10.9",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
